--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/col.css">
   <link rel="stylesheet" href="css/public.css">
-  <link rel="stylesheet" href="homepage.css">
+  <link rel="stylesheet" href="css/homepage.css">
   <script src="js/bootstrap.bundle.min.js"></script>
 
   <title>Homepage</title>
