--- a/homepage.html
+++ b/homepage.html
@@ -27,9 +27,9 @@
 
 
 <body>
-  <header>
+  <header >
       <!--要固定在最上面-->
- <div class="fixed-top header">
+ <div class="fixed-top header" style="background-color: #2f2c40;">
 <nav class="nav">
   <div class="container-fluid " >
       <div class="row ">
@@ -82,11 +82,11 @@
     </nav>
 
   </div>
-
+</header>
 <div class="cover"> 
   <h1 class="word" ><div style="border: 2px #F8F8F6 solid; padding: 1vw; background-color:rgba(255, 255, 255, 0.199); "> Live the life you have imagined</div></h1> </div>
 </div>
-  </header>
+ 
 
 
     <section>
@@ -103,16 +103,16 @@
         <div id="right-col" class="lign-self-center">
           <div  class="lign-self-center " style="margin: 5px; " >
         <div class="list-group " id="list-tab" role="tablist" >
-          <h4 style="color: white; margin: 1vh;">🎇精彩活動與社課</h4>
-            <a class="list-group-item list-group-item-action active btn light" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" style="background-color: #23212F; color: whitesmoke;">Home</a>
-            <a class="list-group-item list-group-item-action d-flex btn light" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" style="background-color: #23212F;color: whitesmoke;">Profile</a>
-            <a class="list-group-item list-group-item-action d-flex btn light" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" style="background-color: #23212F;color: whitesmoke;">Messages</a>
-            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #23212F;color: whitesmoke;">Settings</a>
-            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #23212F;color: whitesmoke;">Settings</a>
-            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #23212F;color: whitesmoke;">Settings</a>
-            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #23212F;color: whitesmoke;">Settings</a>
-            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #23212F;color: whitesmoke;">Settings</a>
-            <a class="list-group-item list-group-item-action d-flex " id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #23212F;color: whitesmoke;">Settings</a>
+          <h4 style="color: #F8F8F6; margin: 1vh;">🎇精彩活動與社課</h4>
+            <a class="list-group-item list-group-item-action active btn light" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home" style="background-color: #2f2c40; color: #F8F8F6">Home</a>
+            <a class="list-group-item list-group-item-action d-flex btn light" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile" style="background-color: #2f2c40; color: #F8F8F6">Profile</a>
+            <a class="list-group-item list-group-item-action d-flex btn light" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages" style="background-color: #2f2c40; color: #F8F8F6">Messages</a>
+            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #2f2c40; color: #F8F8F6">Settings</a>
+            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #2f2c40; color: #F8F8F6">Settings</a>
+            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #2f2c40; color: #F8F8F6">Settings</a>
+            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #2f2c40; color: #F8F8F6">Settings</a>
+            <a class="list-group-item list-group-item-action d-flex btn light" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings" style="background-color: #2f2c40; color: #F8F8F6">Settings</a>
+            <a class="list-group-item list-group-item-action d-flex " id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings"style="background-color: #2f2c40; color: #F8F8F6">Settings</a>
         
   
       </div>
@@ -129,7 +129,7 @@
           <img src="news.jpg" class="card-img " alt="..." style="max-height: 70vh;">.
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
           <div style="text-align: center;">
-            <a href="#" class="btn btn-dark" style="background:#23212F ;">&nbsp;&nbsp;VIEW&nbsp;MORE&nbsp;&nbsp;</a>
+            <a href="#" class="btn btn-dark" style="background:#2f2c40 ;">&nbsp;&nbsp;VIEW&nbsp;MORE&nbsp;&nbsp;</a>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@
           <img src="activity.jpg" class="card-img" alt="..." style="max-height: 70vh;">.
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
           <div style="text-align: center;">
-            <a href="#" class="btn btn-dark" style="background:#23212F ;">&nbsp;&nbsp;VIEW&nbsp;MORE&nbsp;&nbsp;</a>
+            <a href="#" class="btn btn-dark" style="background:#2f2c40 ;">&nbsp;&nbsp;VIEW&nbsp;MORE&nbsp;&nbsp;</a>
           </div>
         </div>
       </div>
@@ -154,7 +154,7 @@
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             
             <div style="text-align: center;">
-                <a href="#" class="btn btn-dark" style="background:#23212F ;">&nbsp;&nbsp;VIEW&nbsp;MORE&nbsp;&nbsp;</a>
+                <a href="#" class="btn btn-dark" style="background:#2f2c40;">&nbsp;&nbsp;VIEW&nbsp;MORE&nbsp;&nbsp;</a>
               </div>
           </div>
         </div>
