--- a/publicnews.html
+++ b/publicnews.html
@@ -22,8 +22,13 @@
       line-height: 45.5px;
     }
 
+
     table {
       border: 2px #2f2c40 solid;
+
+   
+      border:2px #23212F solid;
+
       border-radius: 5px;
       border-collapse: separate;
       text-align: center;
